// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation tests should render Navigation in dark mode 1`] = `
<DocumentFragment>
  .c5 {
  height: 2rem;
  width: 2rem;
  flex-shrink: 0;
}

.c12 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.c6 {
  color: #000000;
  font-size: 2rem;
}

.c9 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  width: medium;
  height: medium;
  background-color: transparent;
  width: fit-content;
}

.c9:hover:not(:active, :disabled) {
  background-color: #333;
}

.c9 .material-symbols-sharp {
  color: inherit;
}

.c9 svg,
.c9 svg g {
  fill: #FFFFFF;
}

.c9:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c11 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  width: medium;
  height: medium;
  margin-right: 1rem;
  background-color: transparent;
  width: fit-content;
}

.c11:hover:not(:active, :disabled) {
  background-color: #333;
}

.c11 .material-symbols-sharp {
  color: inherit;
}

.c11 svg,
.c11 svg g {
  fill: #FFFFFF;
}

.c11:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c13 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  width: medium;
  height: medium;
  width: fit-content;
}

.c13:hover:not(:active, :disabled) {
  background-color: #333;
}

.c13 .material-symbols-sharp {
  color: inherit;
}

.c13 svg,
.c13 svg g {
  fill: #FFFFFF;
}

.c13:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c4 {
  margin-right: 0.75rem;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2.5rem;
  width: 2.5rem;
}

.c4 .material-symbols-sharp {
  color: inherit;
}

.c4:hover {
  background-color: #EEEEEE;
}

.c4:active {
  background-color: #E2E2E2;
}

.c0 {
  position: sticky;
  top: 0;
  z-index: 1000;
  display: flex;
  flex-shrink: 0;
  align-items: center;
  height: 5rem;
  padding: 0 1.25rem;
  transition: all 0.2s ease-in;
  background: rgba(31, 31, 31, 0.6);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
}

.c1 {
  display: flex;
  align-items: center;
  margin: 0 auto;
  width: 100%;
  max-width: 90rem;
}

.c2 {
  display: flex;
  align-items: center;
}

.c7 {
  display: flex;
  margin-left: 1rem;
}

.c8 {
  display: flex;
}

.c10 {
  display: flex;
  margin-left: auto;
}

.c3>button {
  background-color: transparent;
  color: #CBCBCB;
  transition: background-color 0.1s ease-in-out;
}

.c3>button:hover {
  background-color: #333333;
}

@media screen and (max-width: 991.98px) {
  .c7 {
    display: none;
  }
}

@media screen and (min-width: 992px) {

}

@media screen and (min-width: 992px) {
  .c3 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <button
            class="c4"
          >
            <div
              class="c5"
              data-testid="icon-container"
              size="32"
            >
              <span
                class="c6 material-symbols-sharp"
                color="#000000"
                data-testid="icon"
                size="32"
              >
                menu
              </span>
            </div>
          </button>
        </div>
        <svg
          fill="none"
          height="42"
          viewBox="0 0 36 36"
          width="42"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="black"
            height="36"
            rx="4"
            width="36"
          />
          <g
            clip-path="url(#clip0_3_10)"
          >
            <path
              d="M20.4 12L20.16 10.8C20.07 10.34 19.66 10 19.18 10H12C11.45 10 11 10.45 11 11V26C11 26.55 11.45 27 12 27C12.55 27 13 26.55 13 26V20H18.6L18.84 21.2C18.93 21.67 19.34 22 19.82 22H25C25.55 22 26 21.55 26 21V13C26 12.45 25.55 12 25 12H20.4Z"
              fill="white"
            />
          </g>
          <defs>
            <clippath
              id="clip0_3_10"
            >
              <rect
                fill="white"
                height="24"
                transform="translate(6 6)"
                width="24"
              />
            </clippath>
          </defs>
        </svg>
        <ul
          class="c7"
        >
          <li
            class="c8"
          >
            <button
              class="c9"
              data-testid="button"
            >
              <span
                class=""
              >
                Platform
              </span>
            </button>
          </li>
          <li
            class="c8"
          >
            <button
              class="c9"
              data-testid="button"
            >
              <span
                class=""
              >
                Features
              </span>
            </button>
          </li>
          <li
            class="c8"
          >
            <button
              class="c9"
              data-testid="button"
            >
              <span
                class=""
              >
                Integration
              </span>
            </button>
          </li>
          <li
            class="c8"
          >
            <button
              class="c9"
              data-testid="button"
            >
              <span
                class=""
              >
                Why Feature Flags?
              </span>
            </button>
          </li>
          <li
            class="c8"
          >
            <button
              class="c9"
              data-testid="button"
            >
              <span
                class=""
              >
                FAQs
              </span>
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          data-testid="button"
        >
          <div
            class="c12"
            data-testid="icon-container"
            size="24"
          >
            <svg
              height="24"
              viewBox="0 0 128 128"
              width="24"
            >
              <g
                fill="#000000"
              >
                <path
                  clip-rule="evenodd"
                  d="M64 5.103c-33.347 0-60.388 27.035-60.388 60.388 0 26.682 17.303 49.317 41.297 57.303 3.017.56 4.125-1.31 4.125-2.905 0-1.44-.056-6.197-.082-11.243-16.8 3.653-20.345-7.125-20.345-7.125-2.747-6.98-6.705-8.836-6.705-8.836-5.48-3.748.413-3.67.413-3.67 6.063.425 9.257 6.223 9.257 6.223 5.386 9.23 14.127 6.562 17.573 5.02.542-3.903 2.107-6.568 3.834-8.076-13.413-1.525-27.514-6.704-27.514-29.843 0-6.593 2.36-11.98 6.223-16.21-.628-1.52-2.695-7.662.584-15.98 0 0 5.07-1.623 16.61 6.19C53.7 35 58.867 34.327 64 34.304c5.13.023 10.3.694 15.127 2.033 11.526-7.813 16.59-6.19 16.59-6.19 3.287 8.317 1.22 14.46.593 15.98 3.872 4.23 6.215 9.617 6.215 16.21 0 23.194-14.127 28.3-27.574 29.796 2.167 1.874 4.097 5.55 4.097 11.183 0 8.08-.07 14.583-.07 16.572 0 1.607 1.088 3.49 4.148 2.897 23.98-7.994 41.263-30.622 41.263-57.294C124.388 32.14 97.35 5.104 64 5.104z"
                  fill-rule="evenodd"
                />
                <path
                  d="M26.484 91.806c-.133.3-.605.39-1.035.185-.44-.196-.685-.605-.543-.906.13-.31.603-.395 1.04-.188.44.197.69.61.537.91zm2.446 2.729c-.287.267-.85.143-1.232-.28-.396-.42-.47-.983-.177-1.254.298-.266.844-.14 1.24.28.394.426.472.984.17 1.255zM31.312 98.012c-.37.258-.976.017-1.35-.52-.37-.538-.37-1.183.01-1.44.373-.258.97-.025 1.35.507.368.545.368 1.19-.01 1.452zm3.261 3.361c-.33.365-1.036.267-1.552-.23-.527-.487-.674-1.18-.343-1.544.336-.366 1.045-.264 1.564.23.527.486.686 1.18.333 1.543zm4.5 1.951c-.147.473-.825.688-1.51.486-.683-.207-1.13-.76-.99-1.238.14-.477.823-.7 1.512-.485.683.206 1.13.756.988 1.237zm4.943.361c.017.498-.563.91-1.28.92-.723.017-1.308-.387-1.315-.877 0-.503.568-.91 1.29-.924.717-.013 1.306.387 1.306.88zm4.598-.782c.086.485-.413.984-1.126 1.117-.7.13-1.35-.172-1.44-.653-.086-.498.422-.997 1.122-1.126.714-.123 1.354.17 1.444.663zm0 0"
                />
              </g>
            </svg>
          </div>
          <span
            class=""
          >
            <span>
              Star
            </span>
          </span>
        </button>
        <button
          class="c13"
          data-testid="button"
        >
          <span
            class=""
          >
            Docs
          </span>
        </button>
      </div>
    </div>
  </nav>
  .c0 {
  position: fixed;
  z-index: 999;
  top: 79px;
  left: 0;
  right: 0;
  bottom: 0;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  pointer-events: none;
}

.c1 {
  display: flex;
  flex-direction: column;
  background: rgba(31, 31, 31, 0.6);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
  padding: 0.75rem;
}

@media screen and (max-width: 991.98px) {

}

@media screen and (min-width: 992px) {
  .c0 {
    display: none;
  }
}

@media screen and (min-width: 992px) {

}

<div
    class="c0"
  >
    <ul
      class="c1"
      style="opacity: 0; width: 0px; height: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`Navigation tests should renders Navigation correctly 1`] = `
<DocumentFragment>
  .c5 {
  height: 2rem;
  width: 2rem;
  flex-shrink: 0;
}

.c12 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.c6 {
  color: #000000;
  font-size: 2rem;
}

.c9 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #EEEEEE;
  color: #000000;
  width: medium;
  height: medium;
  background-color: transparent;
  width: fit-content;
}

.c9:hover:not(:active, :disabled) {
  background-color: #E2E2E2;
}

.c9 .material-symbols-sharp {
  color: inherit;
}

.c9 svg,
.c9 svg g {
  fill: #000000;
}

.c9:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c11 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #EEEEEE;
  color: #000000;
  width: medium;
  height: medium;
  margin-right: 1rem;
  background-color: transparent;
  width: fit-content;
}

.c11:hover:not(:active, :disabled) {
  background-color: #E2E2E2;
}

.c11 .material-symbols-sharp {
  color: inherit;
}

.c11 svg,
.c11 svg g {
  fill: #000000;
}

.c11:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c13 {
  height: 2.625rem;
  padding: 0 1rem;
  font-size: 1rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #000000;
  color: #FFFFFF;
  width: medium;
  height: medium;
  width: fit-content;
}

.c13:hover:not(:active, :disabled) {
  background-color: #333;
}

.c13 .material-symbols-sharp {
  color: inherit;
}

.c13 svg,
.c13 svg g {
  fill: #FFFFFF;
}

.c13:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c4 {
  margin-right: 0.75rem;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2.5rem;
  width: 2.5rem;
}

.c4 .material-symbols-sharp {
  color: inherit;
}

.c4:hover {
  background-color: #EEEEEE;
}

.c4:active {
  background-color: #E2E2E2;
}

.c0 {
  position: sticky;
  top: 0;
  z-index: 1000;
  display: flex;
  flex-shrink: 0;
  align-items: center;
  height: 5rem;
  padding: 0 1.25rem;
  transition: all 0.2s ease-in;
  background: rgba(238, 238, 238, 0.7);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
}

.c1 {
  display: flex;
  align-items: center;
  margin: 0 auto;
  width: 100%;
  max-width: 90rem;
}

.c2 {
  display: flex;
  align-items: center;
}

.c7 {
  display: flex;
  margin-left: 1rem;
}

.c8 {
  display: flex;
}

.c10 {
  display: flex;
  margin-left: auto;
}

@media screen and (max-width: 991.98px) {
  .c7 {
    display: none;
  }
}

@media screen and (min-width: 992px) {

}

@media screen and (min-width: 992px) {
  .c3 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <button
            class="c4"
          >
            <div
              class="c5"
              data-testid="icon-container"
              size="32"
            >
              <span
                class="c6 material-symbols-sharp"
                color="#000000"
                data-testid="icon"
                size="32"
              >
                menu
              </span>
            </div>
          </button>
        </div>
        <svg
          fill="none"
          height="42"
          viewBox="0 0 36 36"
          width="42"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="black"
            height="36"
            rx="4"
            width="36"
          />
          <g
            clip-path="url(#clip0_3_10)"
          >
            <path
              d="M20.4 12L20.16 10.8C20.07 10.34 19.66 10 19.18 10H12C11.45 10 11 10.45 11 11V26C11 26.55 11.45 27 12 27C12.55 27 13 26.55 13 26V20H18.6L18.84 21.2C18.93 21.67 19.34 22 19.82 22H25C25.55 22 26 21.55 26 21V13C26 12.45 25.55 12 25 12H20.4Z"
              fill="white"
            />
          </g>
          <defs>
            <clippath
              id="clip0_3_10"
            >
              <rect
                fill="white"
                height="24"
                transform="translate(6 6)"
                width="24"
              />
            </clippath>
          </defs>
        </svg>
        <ul
          class="c7"
        >
          <li
            class="c8"
          >
            <button
              class="c9"
              data-testid="button"
            >
              <span
                class=""
              >
                Platform
              </span>
            </button>
          </li>
          <li
            class="c8"
          >
            <button
              class="c9"
              data-testid="button"
            >
              <span
                class=""
              >
                Features
              </span>
            </button>
          </li>
          <li
            class="c8"
          >
            <button
              class="c9"
              data-testid="button"
            >
              <span
                class=""
              >
                Integration
              </span>
            </button>
          </li>
          <li
            class="c8"
          >
            <button
              class="c9"
              data-testid="button"
            >
              <span
                class=""
              >
                Why Feature Flags?
              </span>
            </button>
          </li>
          <li
            class="c8"
          >
            <button
              class="c9"
              data-testid="button"
            >
              <span
                class=""
              >
                FAQs
              </span>
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          data-testid="button"
        >
          <div
            class="c12"
            data-testid="icon-container"
            size="24"
          >
            <svg
              height="24"
              viewBox="0 0 128 128"
              width="24"
            >
              <g
                fill="#000000"
              >
                <path
                  clip-rule="evenodd"
                  d="M64 5.103c-33.347 0-60.388 27.035-60.388 60.388 0 26.682 17.303 49.317 41.297 57.303 3.017.56 4.125-1.31 4.125-2.905 0-1.44-.056-6.197-.082-11.243-16.8 3.653-20.345-7.125-20.345-7.125-2.747-6.98-6.705-8.836-6.705-8.836-5.48-3.748.413-3.67.413-3.67 6.063.425 9.257 6.223 9.257 6.223 5.386 9.23 14.127 6.562 17.573 5.02.542-3.903 2.107-6.568 3.834-8.076-13.413-1.525-27.514-6.704-27.514-29.843 0-6.593 2.36-11.98 6.223-16.21-.628-1.52-2.695-7.662.584-15.98 0 0 5.07-1.623 16.61 6.19C53.7 35 58.867 34.327 64 34.304c5.13.023 10.3.694 15.127 2.033 11.526-7.813 16.59-6.19 16.59-6.19 3.287 8.317 1.22 14.46.593 15.98 3.872 4.23 6.215 9.617 6.215 16.21 0 23.194-14.127 28.3-27.574 29.796 2.167 1.874 4.097 5.55 4.097 11.183 0 8.08-.07 14.583-.07 16.572 0 1.607 1.088 3.49 4.148 2.897 23.98-7.994 41.263-30.622 41.263-57.294C124.388 32.14 97.35 5.104 64 5.104z"
                  fill-rule="evenodd"
                />
                <path
                  d="M26.484 91.806c-.133.3-.605.39-1.035.185-.44-.196-.685-.605-.543-.906.13-.31.603-.395 1.04-.188.44.197.69.61.537.91zm2.446 2.729c-.287.267-.85.143-1.232-.28-.396-.42-.47-.983-.177-1.254.298-.266.844-.14 1.24.28.394.426.472.984.17 1.255zM31.312 98.012c-.37.258-.976.017-1.35-.52-.37-.538-.37-1.183.01-1.44.373-.258.97-.025 1.35.507.368.545.368 1.19-.01 1.452zm3.261 3.361c-.33.365-1.036.267-1.552-.23-.527-.487-.674-1.18-.343-1.544.336-.366 1.045-.264 1.564.23.527.486.686 1.18.333 1.543zm4.5 1.951c-.147.473-.825.688-1.51.486-.683-.207-1.13-.76-.99-1.238.14-.477.823-.7 1.512-.485.683.206 1.13.756.988 1.237zm4.943.361c.017.498-.563.91-1.28.92-.723.017-1.308-.387-1.315-.877 0-.503.568-.91 1.29-.924.717-.013 1.306.387 1.306.88zm4.598-.782c.086.485-.413.984-1.126 1.117-.7.13-1.35-.172-1.44-.653-.086-.498.422-.997 1.122-1.126.714-.123 1.354.17 1.444.663zm0 0"
                />
              </g>
            </svg>
          </div>
          <span
            class=""
          >
            <span>
              Star
            </span>
          </span>
        </button>
        <button
          class="c13"
          data-testid="button"
        >
          <span
            class=""
          >
            Docs
          </span>
        </button>
      </div>
    </div>
  </nav>
  .c0 {
  position: fixed;
  z-index: 999;
  top: 79px;
  left: 0;
  right: 0;
  bottom: 0;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  pointer-events: none;
}

.c1 {
  display: flex;
  flex-direction: column;
  background: rgba(238, 238, 238, 0.7);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
  padding: 0.75rem;
}

@media screen and (max-width: 991.98px) {

}

@media screen and (min-width: 992px) {
  .c0 {
    display: none;
  }
}

@media screen and (min-width: 992px) {

}

<div
    class="c0"
  >
    <ul
      class="c1"
      style="opacity: 0; width: 0px; height: 0px;"
    />
  </div>
</DocumentFragment>
`;
